添加第二章 Window7 操作系统内容

--- a/主要内容/信息技术与计算机文化.md
+++ b/主要内容/信息技术与计算机文化.md
@@ -21,14 +21,15 @@
 
 
 
->        (一)掌握信息技术和计算机文化的基础知识：数据和信息，信息社会，信息技术，“计算机文化”的内涵等。掌握计算机的概念、起源、发展、特点、类型、应用及其发展趋势。
+>        （一）了解操作系统的基本知识：操作系统的概念、功能、特征及分类，Windows 7 基本知识及基本操作，桌面及桌面操作，窗口的组成，对话框和控件的使用，剪贴板的基本操作。
 >
->     (二)掌握有关进制的相关概念，二、八、十、十六进制之间的相互转换。掌握数值、字符(西文、汉字)在计算机中的表示，数据的表示和存储单位(位、字节、字)。
+>        （二）掌握文件及文件夹管理：文件和文件夹的概念、命名规则，“计算机”和“资源管理器”的操作，文件和文件夹的创建、移动、复制、删除及恢复（回收站操作）、重命名、查找和属性设置、快捷方式的创建、文件的压缩等，库操作。
 >
->   (三)掌握计算机硬件系统的组成和功能：CPU、存储器(ROM、RAM)以及常用的输入输出设备的功能。掌握计算机软件系统的组成：系统软件和应用软件，程序设计语言(机器语言、汇编语言、高级语言)及语言处理程序的概念。了解微型计算机硬件配置及常见硬件设备。
+>        （三）掌握Windows 7 中控制面板的操作：设置时钟、语言和区域，声音设置，打印机设置，设备管理器的使用，程序的添加和卸载，管理用户和用户组。
 >
->   :pig:<span style="color:red;font-weight:bold;">(四)新增->掌握云计算、大数据、物联网、人工智能、区块链等新一代信息技术的基本概念，了解新一代信息技术的应用及其发展趋势。</span>
->　
+>        （四）掌握Windows 7 的系统维护与性能优化：磁盘的格式化、磁盘的清理、磁盘的碎片整理，磁盘的检查和备份，文件的备份和还原，使用Windows 组策略增强系统安全防护。
+>
+>        （五）掌握Windows 7 中实用程序的使用：“记事本”和“写字板”、“画图”、“截图工具”、“录音机”、“计算器”、“数学输入面板”等。　
 
 ## 1 信息与信息技术
 
@@ -401,8 +402,6 @@ A.巨型化 B.微型化 C.智能化 D.专业化
     
 ```
 
-
-
 ### 2.3 课后任务
 
 ------
@@ -435,8 +434,6 @@ A.巨型化 B.微型化 C.智能化 D.专业化
 A.有限性 B.差异性 C.组合型 D.扩展性
 
 ```
-
-
 
 ### 3.2 数制及其转换
 
@@ -1009,11 +1006,28 @@ A.指令地址 B.操作码 C.地址码 D.寄存器地址
 
 <span style="color:green;font-weight:bold;">☆☆☆找好参考点 </span>
 
+```CD
+
+1. （2017年多项选择题）下列设备中属于输人设备的是。
+A.显示器 B.绘图仪 C.鼠标器 D.扫描仪
+
+```
+
+
+
 #### **2.** **运算器**
 
 运算器由<span style="color:red;font-weight:bold;text-decoration:underline">算术逻辑单元(ALU, Arithmetic Logic Unit)和寄存器</span>等组成。运算器的功能是完成算术运算和逻辑运算。算术运算是指加、减、乘、除及它们的复合运算。而逻辑运算是指 “与”、“或”、“非”等逻辑比较和逻辑判断等操作。在计算机中，<span style="color:red;font-weight:bold;text-decoration:underline">任何</span>复杂运算都转化为基本的算术与逻辑运算，然后在运算器中完成。
 
 负责对信息进行加工和运算，它的速度决定了计算机的运算速度。参加运算的数（称为操作数）由控制器指示从存储器或寄存器中取出到运算器。
+
+```算数运算
+
+1. （2016年填空题）计算机的运算器是对数据进行_和逻辑运算的部件。
+
+```
+
+
 
 #### **3.** **控制器**
 
@@ -1025,11 +1039,26 @@ A.指令地址 B.操作码 C.地址码 D.寄存器地址
 
 <span style="color:green;font-weight:bold;">☆☆☆控制器是领导、运算器是干活的小兵</span>
 
+```A
+
+1. （2008年单项选择题）在计算机中负责控制和协调计算机各部件自动、连续地进行工作的部件是?
+A.控制器 B.运算器 C.存储器 D.总线
+
+```
+
+
+
 #### **4. 存储器** 
 
 是具有<span style="color:red;font-weight:bold;text-decoration:underline">“记忆”</span>功能的设备，由具有两种稳定状态的物理器件（也称为记忆元件）来存储信息。记忆元件的两种稳定状态分别表示为“0”和“1”。存储器是由成千上万个<span style="color:red;font-weight:bold;text-decoration:underline">“存储单元”</span>构成的，每个存储单元存放一定位数（微机上为8位）的二进制数，每个存储单元都有<span style="color:red;font-weight:bold;text-decoration:underline">唯一</span>的地址。“存储单元”是基本的存储单位，不同的存储单元是用不同的地址来区分的。计算机采用按地址访问的方式到存储器中存数据和取数据，计算机中的程序在执行的过程中，每当需要访问数据时，就向存储器送去指定位置的地址，同时发出一个“存”命令或者“取”命令（伴以待存放的数据）。
 
 <span style="color:green;font-weight:bold;">☆☆☆存储单元是 字节</span>
+
+```存储单元的地址
+
+4. （2016年填空题）内存中的每一个存储单元都被赋予一个唯一的序号，该序号称为________
+
+```
 
 
 
@@ -1053,6 +1082,16 @@ ROM 中的数据或程序一般是在将ROM 装入计算机前事先写好的。
 
 
 
+```AB
+
+1. （2016年多项选择题）下列说法中，哪两句是不正确的。
+A. ROM是只读存储器，其中的内容只能读一次，下次再读就读不出来了
+B. 硬盘通常安装在主机箱内，所以硬盘属于内存
+C. CPU不能直接与外存打交道
+D. 计算机突然停电，则RAM中的数据会全部丢失
+
+```
+
 （2） 随机存储器（ RAM）： 
 
 随机存储器的容量与ROM 相比要大得多，目前微机一般配置1 GB 左右。CPU 从RAM 中既可读出信息又可写入信息，但断电后所存的信息就会丢失。
@@ -1065,6 +1104,22 @@ ROM 中的数据或程序一般是在将ROM 装入计算机前事先写好的。
 
 
 
+```A
+
+1. （2019年判断题）RAM的特点是断电后所存的信息会丢失。
+A.正确 B.错误
+
+```
+
+```C
+
+2.（2018年单项选择题）下列属于存储器且断电后信息全部丢失的是。
+A. ROM B. EPROM C. RAM D. CD - ROM
+    
+```
+
+
+
 （3） 高速缓存（ Cache）： 
 
 随着CPU 主频的不断提高，CPU 对RAM 的存取速度加快了，而RAM 的响应速度相对较慢，造成了CPU 等待，降低了处理速度，浪费了CPU 的能力。
@@ -1074,6 +1129,26 @@ ROM 中的数据或程序一般是在将ROM 装入计算机前事先写好的。
 这对提高程序的运行速度有很大的作用。这个介于内存和CPU 之间的高速小容量存储器称作高速缓冲存储器（ Cache），一般简称为缓存。
 
 <span style="color:green;font-weight:bold;">☆☆☆协调 CPU 与 内存之间的速度差距</span>
+
+```B
+
+1. （2014年选择题）微型计算机存储器系统中的 Cache 是。
+A. 只读存储器
+B. 高速缓冲存储器
+C. 可编程只读存储器
+D. 可擦除可再编程只读存储器
+
+```
+
+```C
+
+2. （2013年单项选择题）配置高速缓冲存储器（Cache）是为了解决。
+A. 内存和外存之间速度不匹配问题
+B. CPU和外存之间速度不匹配问题
+C. CPU和内存之间速度不匹配问题
+D. 主机和外设之间速度不匹配问题
+
+```
 
 
 
@@ -1093,13 +1168,10 @@ ROM 中的数据或程序一般是在将ROM 装入计算机前事先写好的。
 
 
 
-```AD
+```BC
 
-2020 年真题
-21.关于冯.诺依曼计算机体系结构，下列叙述中正确的是（ ）。
-
-A.计算机硬件系统由五大部分构成 B.控制器完成各种算术运算和逻辑运算
-C.程序可以像数据那样存放在运算器中 D.采用二进制形式表示数据和指令
+1. (2018年多项选择题)下列属于输出设备的是。
+A.键盘 B.打印机 C.显示器 D.扫描仪
 
 ```
 
@@ -1124,15 +1196,36 @@ C.程序可以像数据那样存放在运算器中 D.采用二进制形式表示
 
 <img src="../image/image-20201009170247918.png" alt="image-20201009170247918" style="zoom:80%;" />
 
+```D
+
+1. （2015年单项选择题）软件是指使计算机运行所需的程序、数据和有关文档的总和。计算机软件通常分为两大类。
+A.高级语言和机器语言 B.硬盘文件和光盘文件
+C.可执行和不可执行 D.系统软件和应用软件
+
+```
+
 
 
 **1）系统软件:** 是管理、监控和维护计算机资源（包括硬件和软件）、开发应用软件的软件。系统软件居于计算机系统中最靠近硬件的一层，它主要包括操作系统、语言处理程序、数据库管理系统、支撑服务软件等。
+
+```D
+
+1. （2019年单项选择题）下列不属于系统软件的是。
+A.数据库管理系 B.操作系统
+C.程序语言处理系统 D.电子表格处理软件
+
+```
 
 **2）应用软件:** 是为解决计算机各类应用问题而编写的软件，随着计算机应用领域的不断拓展和计算机应用的广泛普及，各种各样的应用软件与日俱增，如办公类软件Microsoft Office、WPS Office、永中office、谷歌在线办公系统；图形处理软件Photoshop、illustrate；三维动画软件3dmax、Maya等；即时通信软件QQ、MSN、UC和Skype等。
 
 <span style="color:green;font-weight:bold;">☆☆☆考点：判断哪些软件是系统软件、哪些是应用软件：记住系统软件的分类（系统软件、语言处理软件、系统支撑服务、数据库管理软件，都是一些不太常接触到的软件系统），剩下的全部是应用软件</span>
 
+```B
 
+1. （2016年单项选择题）下列软件中，属于应用软件的有。
+A. Windows B. Word C.编译程序 D. Unix
+
+```
 
 **系统软件分类**
 
@@ -1141,6 +1234,14 @@ C.程序可以像数据那样存放在运算器中 D.采用二进制形式表示
 是一组对计算机资源进行控制与管理的系统化程序集合，它是用户和计算机硬件系统之间的接口，为用户和应用软件提供了访问和控制计算机硬件的桥梁。
 
 <span style="color:green;font-weight:bold;">☆☆☆操作系统是直接运行在裸机上的最基本的系统软件，任何其他软件必须在操作系统的支持下才能运行</span>
+
+```A
+
+1. （2019年单项选择题）计算机软件系统中，最核心的软件是。
+A.操作系统 B.数据库管理系统
+C.语言和处理程序 D.诊断程序
+
+```
 
 **B.** **语言处理程序：**用各种程序设计语言编写的源程序，计算机是不能直接执行的，必须经过翻译（对汇编语言源程序是汇编，对高级语言源程序则是编译或解释）才能执行，这些翻译程序就是语言处理程序，包括汇编程序、编译程序和解释程序等，它们的基本功能是把用面向用户的高级语言或汇编语言编写的源程序翻译成机器可执行的二进制语言程序。
 
@@ -1218,6 +1319,23 @@ if(1>1){
 
 
 
+```D
+
+1. （2019年单项选择题）下列关于计算机语言的描述中，错误的是
+A. 计算机可以直接执行的是机器语言程序
+B. 汇编语言是一种依赖于计算机的低级语言
+C. 高级语言可读性好、数据结构丰富
+D. 与低级语言相比，高级语言程序的执行效率高
+
+```
+
+```C
+
+2. （2016年单项选择题）以下属于高级语言的是。
+A.汇编语言 B. C语言 C.机器语言 D.以上都是
+
+```
+
 ### **4.4 课后作业**
 
 1 计算机硬件包含哪几个部分？分别有什么特点？
@@ -1262,6 +1380,14 @@ if(1>1){
 
 **1. 主频**  即时钟频率，是指计算机CPU在单位时间内发出的脉冲数，它在很大程度上决定了计算机的运算速度，主频的单位是赫兹（Hz）。
 
+```C
+
+1. （2018年单项选择题）计算机的主频是指,
+A.硬盘的读写速度 B.显示器的刷新速度
+C.CPU的时钟频率 D.内存的读写速度
+
+```
+
 **2. 字长** 是指计算机的运算部件能同时处理的二进制数据的位数，它与计算机的功能和用途有很大的关系。
 
 ```字长
@@ -1273,6 +1399,14 @@ ___________ 表示 CPU 每次处理数据的能力，常见的有 32 位 CPU、6
 **3. 内核数** CPU内核数指CPU内执行指令的运算器和控制器的数量所谓多核心处理器简单地说就是在一块CPU基板上集成两个或两个以上的处理器核心，并通过并行总线将各处理器核心连接起来。多核心处理技术的推出，大大地提高了CPU的多任务处理性能，并已成为市场的主流。 
 
 **4. 内存容量**  是指内存储器中能存储信息的总字节数。一般来说，内存容量越大，计算机的处理速度越快。随着更高性能的操作系统的推出，计算机的内存容量会继续增加。
+
+```C
+
+1. （2008年单项选择题）在微机性能指标中，用户可用的内存容量是指.
+A. ROM存储器 B. RAM和ROM存储器
+C. RAM存储器 D. CD - ROM容量
+
+```
 
 **5. 运算速度**  单位时间内执行的计算机指令数。  
 
@@ -1286,11 +1420,18 @@ ___________ 表示 CPU 每次处理数据的能力，常见的有 32 位 CPU、6
 
 <span style="color:green;font-weight:bold;">☆☆☆一般来说：主频越高，运算速度越快；字长越长，运算速度越快；内存越大，运算速度越快; 存储周期越小越快</span>
 
+```AB
+
+1. （2019年多项选择题）下列选项中，属于微机主要性能指标的有。
+A.运算速度 B.内存容量 C.能配备的设备数 D.接口数
+
+```
+
 
 
 ### **5.3 常见微型计算机的硬件设备**
 
-![image-20201009181221140](../image/image-20201009181221140.png)
+<img src="../image/image-20201009181221140.png" alt="image-20201009181221140" style="zoom: 67%;border-radius:40px;" />
 
 #### **1 微处理器**
 
@@ -1316,11 +1457,11 @@ ___________ 表示 CPU 每次处理数据的能力，常见的有 32 位 CPU、6
 
 **（1）软盘** 其直径为3.5英寸，容量为1.44 MB。软盘上有写保护口，当写保护口处于保护状态（即写保护口打开）时，只能读取盘中信息，而不能写入，用于防止擦除或重写数据，也能防止病毒侵入。
 
-<img src="../image/image-20201014132313993.png" alt="image-20201014132313993" style="zoom:50%;" />
+<img src="../image/image-20201014132313993.png" alt="image-20201014132313993" style="zoom:50%;border-radius:40px;" />
 
 **（2）硬盘：**是微机上最重要的外存储器，它由多个质地较硬的涂有磁性材料的金属盘片组成，每个盘片的每一面都有一个读、写磁头，用于磁盘信息的读写。硬盘是目前存取速度最快的外存。
 
-<img src="../image/image-20201014133342198.png" alt="image-20201014133342198" style="zoom:50%;" />
+<img src="../image/image-20201014133342198.png" alt="image-20201014133342198" style="zoom:50%;border-radius:40px;" />
 
 **（3）闪存（Flash Memory）**作为存储介质的半导体集成电路制成的电子盘已成为主流的可移动外存。电子盘又称“优盘”，可反复存取数据。
 
@@ -1336,11 +1477,11 @@ ___________ 表示 CPU 每次处理数据的能力，常见的有 32 位 CPU、6
 
 **1）PCI总线** 是由Intel、IBM、DEC公司推出的一种局部总线，它定义了32位数据总线，且可扩展为64位。PCI是迄今为止最成功的总线接口规范之一。PCI总线与CPU之间没有直接相连，而是经过桥接（Bridge）芯片组电路连接。该总线稳定性和匹配性出色，提升了CPU的工作效率，最大传输速率可达132MB/s
 
-<img src="../image/image-20201014144801501.png" alt="image-20201014144801501" style="zoom: 67%;" />
+<img src="../image/image-20201014144801501.png" alt="image-20201014144801501" style="zoom: 67%;border-radius:40px;" />
 
 **2）AGP** 是加速图形端口的缩写，是为提高视频带宽而设计的总线结构，它是一种显示卡专用的局部总线，使图形加速硬件与CPU和系统存储器之间直接连接，无须经过繁忙的PCI总线，提高了系统实际数据传输速率和随机访问内存时的性能。目前AGP 8X的总线传输率达到2.1GB/s。 
 
-<img src="../image/image-20201014145058788.png" alt="image-20201014145058788" style="zoom: 67%;" />
+<img src="../image/image-20201014145058788.png" alt="image-20201014145058788" style="zoom: 67%;border-radius:40px;" />
 
 **3）USB总线** 即通用串行总线，是一种广泛采用的接口标准。它连接外设简单快捷，支持<span style="color:red;font-weight:bold;">热拔插</span>，成本低、速度快、连接设备数量多，广泛地应用于计算机、摄像机、数码相机和手机等各种数码设备上。目前USB Ver2.0数据传输率达到60Mbps。
 
@@ -1365,6 +1506,15 @@ BIOS 和 CMOS 区别
 CMOS  是可读写 RAM 芯片，主要用来保存时间、日期、硬盘参数，CMOS RAM 芯片由系统通过一块后备电池供电，无论是在关机状态中，还是遇到系统掉电的情况，CMOS 信息都不会丢失。
 
 现在，很多厂家将 CMOS 设置程序做到了 BIOS 芯片中，在开机时通过按下某个特定的键就可以进入 CMOS 设置程序，可以非常方便地对系统进行设置，因此这种 CMOS 设置又通常被叫做 BIOS 设置。
+
+```B
+
+1. （2015年判断题）主板是微型计算机系统中最大的一块电路板，它需要插到插槽中才能工作。
+A.正确 B.错误
+
+```
+
+
 
 #### **5. 输入设备**
 
